<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuel</string>

    <string name="name">Name Car</string>
    <string name="aguarde">Loading...</string>
    
    <!-- About -->
    <string name="app_copywrite">© 2012-2013 @maboobr</string>
    <string name="app_allrights">All rights reserved.</string>
    
    <!-- Version -->
    <string name="app_version">1.0.0</string>

    <!-- BASE -->
    <string name="dbname">bd_itsmycar</string>
    <string name="tb_itemlog">ItemLog</string>
    <string name="tb_carro">Carro</string>

    <!-- Error msg user -->
    <string name="erro_conexao_db_indisponivel">Bad, bad app! No donut for you. Please, re-start.</string>
    <string name="t_e_c">Connection</string>
    
    <!-- titulo da tela -->
	<string name="t_exp">EXPENSE</string>
    <string name="t_rep">REPAIR</string>
    <string name="t_not">NOTE</string>
    <string name="t_ful">FUEL</string>

    <!-- titulo de campos -->
    <string name="tv_vr">VEHICLE REGISTRATION</string>
    <string name="tv_pr">PLATE REGISTRATION</string>
    <string name="tv_tv">TYPE VEHICLE</string>
    <string name="tv_s">SUBJECT</string>
    <string name="tv_v">VALUE</string>
    <string name="tv_gp">GALLON PRICE</string>
    <string name="tv_ap">AMOUNT PAID</string>
    <string name="tv_o">ODOMETER</string>
    <string name="tv_n">NOTE</string>

    <!-- msg code -->
    <string name="a_f_db">fechando conexão com o db...</string>
    <string name="a_c_db">criando nova conexão com o db...</string>

    <!-- alertas -->
    <string name="a_dt_car">Are you sure you want to delete this car?</string>
    <string name="a_dt_item">Are you sure you want to delete this item?</string>
    <string name="t_f_item">Empty fields</string>
    <string name="a_f_item"> Please, fill in all fields with red color.</string>
    <string name="t_r_t_1">Invalid number</string>
    <string name="t_r_1">The amount payable shall be at least twice the value of the unit.</string>

    <!-- Positivo e negativo -->
    <string name="a_n">Not</string>
    <string name="a_y">Yes</string>

    <!-- fonts -->
    <string name="font_default">"fonts/DroidSansFallback.ttf"</string>

    <!-- hint -->
    <string name="h_subject">"insert a subject here"</string>
    <string name="h_text">"insert a little text here"</string>
    <string name="h_click">"click here"</string>
    <string name="h_n_vehicle">"insert a name"</string>
    <string name="h_p_vehicle">"insert a place"</string>

    <!-- Menu -->
    <string name="m_about">"About"</string>
    <string name="m_set">"Settings"</string>
    <string name="m_exit">"Exit"</string>

    <!-- Settings -->
    <string name="s_t">Set your preferences here</string>
    <string name="s_t_1">"Input Volume"</string>
    <string name="s_d_1">"Select units used to input fuel volume"</string>
    <string name="s_t_2">"Input Distance"</string>
    <string name="s_d_2">"Select units used to input odometer distance"</string>
    <string name="s_t_3">"Currency"</string>
    <string name="s_d_3">"Select currency used to represent fuel coast"</string>
    
    <!-- Edit Settings Inicio -->
    <string name="settings">Settings</string>    
    <string name="units">Units</string>
    
    <string-array name="volume">
        <item>Litro</item>
        <item>US Gallon</item>
        <item>Imperial Gallon</item>
    </string-array>
    
    <string-array name="volume_values">
        <item>ℓ</item>
        <item>US gal</item>
        <item>UK gal</item>
    </string-array>
    
    <string-array name="distance">
        <item>Kilometros</item>
        <item>Miles</item>
    </string-array>
    
    <string-array name="distance_values">
        <item>Km</item>
        <item>mi</item>
    </string-array>
    
    <string-array name="currency">
        <item>Dollar</item>
        <item>Euro</item>
        <item>Pound</item>
        <item>Yuan</item>
        <item>Real</item>
        <item>Hong Kong Dollar</item>
    </string-array>
    
    <string-array name="currency_values">
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>¥</item>
        <item>R$</item>
        <item>HK$</item>
    </string-array>
    <!-- Edit Settings FIM -->

</resources>