<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:paddingLeft="5dp"
        android:paddingTop="10dp" >

        <TableRow>

            <TextView
                style="@style/texto16cinzaDarkNegrito"
                android:paddingRight="5dip"
                android:text="@string/s_t_1" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/texto14cinza"
                android:paddingRight="5dip"
                android:text="@string/s_d_1" />
            <!-- Litre - US gallon - Imperial galoon -->

        </TableRow>

        <include
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            layout="@layout/line" />

        <TableRow>

            <TextView
                style="@style/texto16cinzaDarkNegrito"
                android:paddingRight="5dip"
                android:text="@string/s_t_2" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/texto14cinza"
                android:paddingRight="5dip"
                android:text="@string/s_d_2" />
            <!-- Km - miles -->

        </TableRow>

        <include
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            layout="@layout/line" />

        <TableRow>

            <TextView
                style="@style/texto16cinzaDarkNegrito"
                android:paddingRight="5dip"
                android:text="@string/s_t_3" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/texto14cinza"
                android:paddingRight="5dip"
                android:text="@string/s_d_3" />
            <!-- $ dollar - euro - pound - Yuan/yen - R$ real - HK$ hong kong dollar -->

        </TableRow>
    </TableLayout>

</ScrollView>