<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <!-- Date -->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <LinearLayout android:gravity="center" >

            <TextView
                android:id="@+id/date"
                style="@style/texto20pretoNegrito"
                android:layout_width="80dp"
                android:layout_height="53dp"
                android:background="@drawable/f_time"
                android:gravity="center"
                android:onClick="showTimePickerDialog"
                android:scaleType="centerInside" />
        </LinearLayout>
    </TableRow>

    <!-- VALUE U -->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/t_value_u"
            style="@style/texto16cinzaDark"
            android:gravity="center"
            android:text="@string/tv_gp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/value_u"
            style="@style/texto55Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="centerInside" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <!-- VALUE P -->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/t_value_p"
            style="@style/texto16cinzaDark"
            android:gravity="center"
            android:text="@string/tv_ap" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/value_p"
            style="@style/texto55Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="centerInside" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <!-- ODOMETER -->

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/t_odometer"
            style="@style/texto16cinzaDark"
            android:gravity="center"
            android:text="@string/tv_o" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/odometer"
            style="@style/texto55Negrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleType="centerInside" />
    </TableRow>

</TableLayout>